@@ -1,8 +1,11 @@
 #$Author: sinnwell $
-#$Date: 2011/12/05 20:56:10 $
-#$Header: /projects/genetics/cvs/cvsroot/haplo.stats/R/haplo.score.q,v 1.30 2011/12/05 20:56:10 sinnwell Exp $
+#$Date: 2013/01/14 19:33:16 $
+#$Header: /projects/genetics/cvs/cvsroot/haplo.stats/R/haplo.score.q,v 1.31 2013/01/14 19:33:16 sinnwell Exp $
 #$Locker:  $
 #$Log: haplo.score.q,v $
+#Revision 1.31  2013/01/14 19:33:16  sinnwell
+#small changes for 1.5.9
+#
 #Revision 1.30  2011/12/05 20:56:10  sinnwell
 #final manual changes, updated test suite
 #
@@ -300,7 +303,7 @@ haplo.score <- function(y, geno, trait.type="gaussian",
 
       if(adjusted){
          require("rms")
-         reg.out <- lrm(y ~ x.adj)
+         reg.out <- rms:::lrm(y ~ x.adj)
          K <- max(y)
          n.xadj <- ncol(x.adj)
          alpha <- reg.out$coef[1:(K-1)]
