@@ -6,10 +6,9 @@
 verbose=TRUE
 
 require(haplo.stats)
-#library(haplo.stats, lib="/projects/bsi/gentools/R/lib214")
 
 Sys.setlocale("LC_ALL", "C")
-sessionInfo()
+Sys.getlocale("LC_COLLATE")
 
 if(verbose) cat("prepare two datasets, one with char alleles, the other 3 loci from hla data\n")
   
